--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ Pillow = "^9.4.0"
 SQLAlchemy = "^1.4.46"
 sendgrid = "^6.9.7"
 requests = "^2.28.2"
+inflect = "^6.0.2"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^4.0.0"
