--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ mypy = "^0.770"
 types-requests = "^2.28.11"
 types-Pillow = "^9.4.0"
 sqlalchemy-stubs = "^0.3"
+ruff = "^0.0.230"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
