--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ SQLAlchemy = "^1.4.46"
 sendgrid = "^6.9.7"
 requests = "^2.28.2"
 inflect = "^6.0.2"
+pytest-pretty = "^1.0.1"
 
 [tool.poetry.dev-dependencies]
 pytest-cov = "^4.0.0"
