update: modified base env file

--- a/.base.env
+++ b/.base.env
@@ -2,18 +2,18 @@
 app_name="Faster Template"
 
 # Database
-database_username="postgres"
-database_password="somepassword"
-database_name="faster_db"
+POSTGRES_USER="postgres"
+POSTGRES_PASSWORD="somecomplexdbpasswordhere"
+POSTGRES_DB="faster_db"
 test_database_name="faster_test_db"
-database_private_address="127.0.0.1"
-database_public_address="127.0.0.1"
+database_private_address="faster_db" # docker-compose service name, can be changed as required
+database_public_address="faster_db" # docker-compose service name, can be changed as required
 database_port="5432"
 
 # Admin Users
 test_super_user_email="superadmin@mail.com"
 test_super_username="test_super_user"
-test_super_user_password="sometestpassword"
+test_super_user_password="test_super_user_password"
 
 # JWT
 jwt_secret_key="somesupersecretkeyhere"
